Vert.X file download api
